crates/service/tests/code_action/snapshots/features__code_action__add_omitted_idx__load_store_with_mem_arg.snap
---
source: crates/service/tests/code_action/add_omitted_idx.rs
expression: response
---
[
  {
    "title": "Add memory idx for `v128.load64_splat`",
    "kind": "quickfix",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 4,
                "character": 21
              },
              "end": {
                "line": 4,
                "character": 21
              }
            },
            "newText": " $m"
          }
        ]
      }
    }
  }
]
