crates/service/tests/code_action/snapshots/features__code_action__add_omitted_idx__memory_init_1_immediate.snap
---
source: crates/service/tests/code_action/add_omitted_idx.rs
expression: response
---
[
  {
    "title": "Add memory idx for `memory.init`",
    "kind": "quickfix",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 4,
                "character": 15
              },
              "end": {
                "line": 4,
                "character": 15
              }
            },
            "newText": " $m"
          }
        ]
      }
    }
  }
]
