crates/service/tests/code_action/snapshots/features__code_action__add_omitted_idx__table_copy_1_immediate.snap
---
source: crates/service/tests/code_action/add_omitted_idx.rs
expression: response
---
[
  {
    "title": "Add table idx for `table.copy`",
    "kind": "quickfix",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 4,
                "character": 14
              },
              "end": {
                "line": 4,
                "character": 14
              }
            },
            "newText": " $t"
          }
        ]
      }
    }
  }
]
