crates/service/tests/code_action/snapshots/features__code_action__add_omitted_idx__with_diagnostic.snap
---
source: crates/service/tests/code_action/add_omitted_idx.rs
expression: response
---
[
  {
    "title": "Add memory idx for `memory.init`",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 5,
            "character": 4
          },
          "end": {
            "line": 5,
            "character": 15
          }
        },
        "code": "omitted-idx-in-instr",
        "message": ""
      }
    ],
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 5,
                "character": 15
              },
              "end": {
                "line": 5,
                "character": 15
              }
            },
            "newText": " 0"
          }
        ]
      }
    }
  }
]
